# emgonset

./: LICENSE  README.md  pyproject.toml
src/emgonset/: __init__.py
src/emgonset/detection/: onset.py
src/emgonset/features/: time_domain.py
src/emgonset/models/: cnn_base.py  cnn_basic.py  cnn_train.py  cnn_utils.py
src/emgonset/models/checkpoints/: initial_model.pth
src/emgonset/processing/: envelope.py  filters.py  normalization.py  rectifiers.py  stft.py  tkeo.py  transforms.py
src/emgonset/utils/: internals.py  io.py  padding.py
src/emgonset/visualization/: detection_plots.py
src/emgonset/vizualization/: general_plots.py
tests/: MFCC_test.py  data_loading_.py  fuzzy_entropy.py  onset-detection.py  onset_test.py  stft_test.py  stft_torch_test.py  test_detection_methods.py  test_gpu.py  transient_hopping.py
